--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,28 @@
 asgiref==3.7.2
 defusedxml==0.7.1
 diff-match-patch==20230430
+dj-database-url==2.1.0
 Django==4.2.2
 django-countries==7.5.1
+django-heroku==0.3.1
 django-import-export==3.2.0
 django-jazzmin==2.6.0
 django-phonenumber-field==7.1.0
 django-phonenumbers==1.0.1
 et-xmlfile==1.1.0
+gunicorn==21.2.0
 MarkupPy==1.14
 odfpy==1.4.1
 openpyxl==3.1.2
+packaging==23.1
 phonenumbers==8.13.15
 Pillow==9.5.0
+psycopg2==2.9.7
 PyYAML==6.0
 shortuuid==1.0.11
 sqlparse==0.4.4
 tablib==3.5.0
 typing_extensions==4.7.0
+whitenoise==6.5.0
 xlrd==2.0.1
 xlwt==1.3.0
