--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -8,7 +8,8 @@ jobs:
     strategy:
       max-parallel: 2
       matrix:
-        python-version: [3.9, 3.12]
+        python-version: [3.9, 3.10]
+        architecture: 'x64'
 
     steps:
       - uses: actions/checkout@v3
