Chore: Update requirements.txt

--- a/requirements.txt
+++ b/requirements.txt
@@ -10,14 +10,18 @@ django-jazzmin==2.6.0
 django-phonenumber-field==7.1.0
 django-phonenumbers==1.0.1
 et-xmlfile==1.1.0
+flake8==6.1.0
 gunicorn==21.2.0
 MarkupPy==1.14
+mccabe==0.7.0
 odfpy==1.4.1
 openpyxl==3.1.2
 packaging==23.1
 phonenumbers==8.13.15
 Pillow==9.5.0
 psycopg2==2.9.7
+pycodestyle==2.11.0
+pyflakes==3.1.0
 PyYAML==6.0
 shortuuid==1.0.11
 sqlparse==0.4.4
