--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -31,13 +31,13 @@ jobs:
     runs-on: ubuntu-latest
     name: deploy our django application to heroku
     steps:
-      - name: checkout
-        uses: actions/checkout@v3
+       - name: checkout
+         uses: actions/checkout@v3
 
-      - name: Deploy
-        uses: akhileshns/heroku-deploy@v3.12.14 # This is the action
-          with:
-            heroku_api_key: ${{secrets.HEROKU_API_KEY}}
-            heroku_app_name: ${{secrets.HEROKU_APP_NAME}} #Must be unique in Heroku
-            heroku_email: "johndbizz@gmail.com"
-            branch: "master"
+       - name: Deploy app
+         uses: akhileshns/heroku-deploy@v3.12.14 # This is the action
+           with:
+             heroku_api_key: ${{secrets.HEROKU_API_KEY}}
+             heroku_app_name: ${{secrets.HEROKU_APP_NAME}} #Must be unique in Heroku
+             heroku_email: "johndbizz@gmail.com"
+             branch: "master"
