--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -30,6 +30,7 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     name: deploy our django application to heroku
+    needs: [build]
     steps:
        - name: Checkout code
          uses: actions/checkout@v2
